--- a/waste-management-api/views/collection_point.pug
+++ b/waste-management-api/views/collection_point.pug
@@ -1,5 +1,5 @@
 li.nav-item
-  a.nav-link.collapsed(href='', data-bs-toggle='collapse', data-bs-target='#components-nav')
+  a.nav-link.collapsed(href='#', data-bs-toggle='collapse', data-bs-target='#components-nav')
     i.bi.bi-geo-alt-fill
     span Collection points
     i.bi.bi-chevron-down.ms-auto
@@ -7,7 +7,7 @@ li.nav-item
     li
       a(href="/?layer=collection_points")
         i.bi.bi-circle
-        span See all Collection Points
+        span View Collection Points
 
     li
       a(href="/api/collectionpoints/create")
@@ -25,124 +25,38 @@ li.nav-item
             .col-md-12
               .input-group.mt-2.form-option
                 .col-md-4
-                  select#collectionFilterOptions.form-control(name="filterType")
+                  select#collectionFilterFormOptions.form-control(name="filterType")
                     option(value="id") ID
                     option(value="code") Code
                     option(value="postal_code") Postal Code
                     //- option(value="city") City
                 .col-md-5
-                  input.form-control(type="text", id="collectionFilterValue", aria-describedby="inputGroupPrepend2", required)
+                  input.form-control(type="text", id="collectionFilterFormValue", aria-describedby="inputGroupPrepend2", required)
                 .col-md-3  
                   button.btn.btn-primary(type="submit")
                     i.bi.bi-check-circle
+
+script(src="./assets/js/utils.js")
 script.
+  document.addEventListener('DOMContentLoaded', (event) => {
+    let urlParams = new URLSearchParams(window.location.search);
+    const layer = urlParams.get('layer');
 
-  async function isPostalCodeExist(filterValue) {
-    const result = await db.manyOrNone('SELECT * FROM collection_points WHERE postal_code = $1', [filterValue]);
-    return result.rows.length > 0;
+    if (window.location.href.includes('collection_points')) {
+      window.fetchData(layer, null, null)
+      .then(nestedFeatures => [].concat(...nestedFeatures))
+      .then(features => {
+        for (let feature of features) {
+          feature.set('layer', 'collection_points');
+        }
+        collectionPointsSource.clear();
+        collectionPointsSource.addFeatures(features);
+      });
+
+      window.handleFilterForm('collectionFilterForm', 'collection_points', collectionPointsSource);
     }
 
-  // Fetch all data when the page loads
-  fetchData('collection_points');
-
-  const collectionFilterForm = document.getElementById('collectionFilterForm');
-  collectionFilterForm.addEventListener('submit', function(event) {
-    event.preventDefault();
-
-    // Get the selected option value
-    const filterType = document.getElementById('collectionFilterOptions').value;
-    const filterValue = document.getElementById('collectionFilterValue').value;
-
-    // Validation
-    if (filterType === 'id' && isNaN(filterValue)) {
-      alert('Please enter a valid ID');
-      return;
-    }
-
-    if (filterType === 'code' && !/^[a-zA-Z0-9]+$/.test(filterValue)) {
-      alert('Code must be alphanumeric');
-      return;
-    }
-
-    if (filterType === 'postal_code') {
-      if (isNaN(filterValue) || filterValue.length !== 5) {
-        alert('Please enter a valid Postal Code');
-        return;
-      } else if (!isPostalCodeExist(filterValue)) {
-        alert('Postal Code does not exist in the system');
-        return;
-      }
-    }
-
-
-    if (filterType === 'city' && !/^[a-zA-Z\s]+$/.test(filterValue)) {
-      alert('City must only contain letters');
-      return;
-    }
-
-    if (!filterValue) {
-      alert('Please enter a filter value');
-      return;
-    }
-
-    // Fetch the data
-    fetchData('collection_points', filterType, filterValue);
+    // Always handle treatment filter form, regardless of the current page
+    window.handleFilterForm('treatmentFilterForm', 'treatment_sites', treatmentSitesSource);
   });
 
-  function fetchData(layerName = 'collection_points', filterType = null, filterValue = null) {
-    const wmsUrl = 'http://localhost/cgi-bin/mapserv?';
-    const wmsParams = new URLSearchParams({
-      map: '/home/dan/wastemanagement-project/postgis_data_visualization.map',
-      service: 'WFS',
-      version: '1.1.0',
-      request: 'GetFeature',
-      typename: layerName,
-      srsname: 'EPSG:4326',
-      outputFormat: 'geojson',
-    });
-
-    const url = `${wmsUrl}${wmsParams.toString()}`;
-
-    console.log('Fetching data with URL:', url); // Log the request URL
-
-    fetch(url)
-      .then(function (response) {
-        if (!response.ok) {
-          throw new Error(`HTTP error ${response.status}`);
-        }
-        return response.json();
-      })
-      .then(function (data) {
-        console.log('Received data:', data); // Log the received data
-        const features = new ol.format.GeoJSON().readFeatures(data, {
-          featureProjection: 'EPSG:3857',
-        });
-
-        let filteredFeatures = features;
-
-        // Apply the filter if provided
-        if (filterType && filterValue) {
-          filteredFeatures = features.filter(feature => {
-            const propertyValue = feature.get(filterType);
-            return propertyValue && propertyValue.toString() === filterValue;
-          });
-        }
-
-        // Close the popup if it's open and its feature is not in the filtered features
-        const popupElement = popup.getElement();
-        const popupFeatureId = popupElement.dataset.featureId;
-        if (popupFeatureId) {
-          const popupFeature = features.find(feature => feature.get('id').toString() === popupFeatureId);
-          if (!filteredFeatures.includes(popupFeature)) {
-            popup.setPosition(undefined);
-          }
-        }
-
-        console.log('Parsed features:', filteredFeatures); // Log the parsed features
-        collectionPointsSource.clear(); // Clear the existing features
-        collectionPointsSource.addFeatures(filteredFeatures); // Add the new features
-      })
-      .catch(function (error) {
-        console.error('Error fetching GeoJSON data:', error);
-      });
-  } 
