--- a/waste-management-api/views/layout.pug
+++ b/waste-management-api/views/layout.pug
@@ -31,6 +31,8 @@ html(lang="en")
     link(rel="stylesheet" href="https://cdn.jsdelivr.net/gh/walkermatt/ol-layerswitcher@master/dist/ol-layerswitcher.css" type="text/css")
     script(src="https://code.jquery.com/jquery-3.6.0.min.js")
     script(src="https://code.jquery.com/ui/1.13.0/jquery-ui.min.js")
+    script(src="./assets/js/utils.js")
+
     style.
       html, body, #map {
         width: 100%;
