--- a/waste-management-api/views/sidebar_items.pug
+++ b/waste-management-api/views/sidebar_items.pug
@@ -26,7 +26,7 @@ nav-item
     span Collection Schedule
 
 nav-item
-  a.nav-link.collapsed(href="#")
+  a.nav-link.collapsed(href="/api/wasterecords/data")
     i.bi.bi-card-checklist
     span Waste Records 
 
